<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expenses Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_summary_expenses">Summary Expenses</string>
    <string name="title_event_fragment">Events</string>
    <string name="menu_title_event_add">Add Event</string>
    <string name="invoices_title">you debt:</string>
    <string name="zero_value">0</string>
    <string name="Add">Add</string>
    <string name="title_activity_event_description">Title</string>
    <string name="title_activity_new_invoice">NewInvoiceActivity</string>
    <string name="edit_text_product_service">Product / Service bought</string>
    <string name="edit_text_price_string">Price</string>
    <string name="AddBill">Add Bill</string>
    <string name="button_add">Add</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="edit_text_event_name_hint">Name of the event</string>
    <string name="edit_text_event_description_hint">Description (optional)</string>
    <string name="text_view_friends_title">Friends</string>
    <string name="button_add_friend_event">+</string>
    <string name="button_create_event">Done</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="action_bar_create_event_title">Create Event</string>
    <string name="action_bar_friends_title">Friends</string>
    <string name="text_view_event_name">Event name</string>
    <string name="text_view_event_description">Event description</string>
    <string name="text_view_title_you_owe">You Owe</string>
    <string name="text_view_title_owed_to_you">Owed to you</string>
    <string name="text_view_sum_invoices">Total</string>
    <string name="action_bar_expenses_manager_title">Expenses Manager</string>
    <string name="text_view_empty_event_list">You don\'t have events.</string>
    <string name="text_view_empty_create_event_list">You don\'t have Friends for this event.</string>
    <string name="text_view_empty_event_description_list">This event doesn\'t have bills.</string>
    <string name="text_view_amount">$ %d</string>
    <string name="radio_button_text_aboutme">About.me</string>
    <string name="text_view_title_login_with">Login with...</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name ="string_login_status_default_error">Unknown Error, please consult the developer.</string>
    <string name ="string_login_status205">Error 205 Rest Content: The content of a system directory, such as the featured directory, has changed.</string>
    <string name ="string_login_status304">Error 304 Not Modified: There was no new data to return.</string>
    <string name ="string_login_status400">Error 400 Bad Request: The request was invalid.</string>
    <string name ="string_login_status401">Error 401 Unauthorized: The user credentials are invalid or disabled.</string>
    <string name ="string_login_status403">Error 403 Forbidden: The request is understood, but it has been refused.</string>
    <string name ="string_login_status404">Error 404 Not Found: The user credentials are invalid or the resource requested does not exist.</string>
    <string name ="string_login_status406">Error 406 Not Acceptable: The format of the request is invalid. This is returned by the search API.</string>
    <string name ="string_login_status500">Error 500 Internal Server Error: Something is broken.</string>
    <string name ="string_login_status501">Error 501 Not Implemented: The requested feature is not implemented or supported.</string>
    <string name ="string_login_status502">Error 502 Bad Gateway: About.me is down or being upgraded.</string>
    <string name ="string_login_status503">Error 503 Service Unavailable: The about.me servers are up, but overloaded with requests. Please try again later.</string>


</resources>
